Miscellaneous cleanups
PiperOrigin-RevId: 864314875